syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "VanishEntitySmsgProto";

enum VanishKind {
  GONE = 0;
  DEATH = 1;
}

/**
 * Sends the active selected entity to the server.
 */
message VanishEntitySMSG {
  uint64 entity_id = 1;
  VanishKind kind = 2;
}
